--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,10 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.yesterselga:country-picker-android:1.0'
 
+
+    implementation 'com.github.AbedElazizShe:LightCompressor:0.7.4'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
+
 }
