--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.meetingofhearts">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
@@ -12,10 +12,19 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_moh"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_moh_round"
         android:supportsRtl="true"
-        android:requestLegacyExternalStorage="true"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="@string/app_id"/>
+
+        <activity
+            android:name=".ui.ConversationsActivity"
+            android:label="Chat Log" />
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.example.meetingofhearts"
@@ -25,7 +34,11 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
-        <activity android:name=".players.VideoPlayerActivity" android:label="Video Player" android:noHistory="true" />
+
+        <activity
+            android:name=".players.VideoPlayerActivity"
+            android:label="Video Player"
+            android:noHistory="true" />
         <activity
             android:name=".ui.ChatActivity"
             android:windowSoftInputMode="stateVisible|adjustResize" />
