change package name

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
     buildToolsVersion "30.0.1"
 
     defaultConfig {
-        applicationId "com.example.meetingofhearts"
+        applicationId "com.sufnatech.meetingofhearts"
         minSdkVersion 24
         targetSdkVersion 30
         versionCode 1
