--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sufnatech.meetingofhearts">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -11,29 +10,25 @@
     <uses-permission android:name="android.permission.BLUETOOTH" />
 
     <application
+        android:name=".App"
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_moh"
         android:label="@string/app_name"
         android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_moh_round"
         android:supportsRtl="true"
-        android:hardwareAccelerated="true"
         android:theme="@style/AppTheme">
-
-        <meta-data android:name="com.startapp.sdk.APPLICATION_ID"
-            android:value="@string/startapp_id" />
 
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="@string/app_id"/>
-
-        <meta-data android:name="com.startapp.sdk.RETURN_ADS_ENABLED"
-            android:value="false" />
+            android:value="@string/app_id" />
 
         <activity
+            android:name=".ui.ConversationsActivity"
             android:hardwareAccelerated="true"
-            android:name="com.sufnatech.meetingofhearts.ui.ConversationsActivity"
-            android:label="Chat Log" />
+            android:label="Chat Log"
+            android:screenOrientation="portrait" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -46,34 +41,42 @@
         </provider>
 
         <activity
-            android:name="com.sufnatech.meetingofhearts.players.VideoPlayerActivity"
+            android:name=".players.VideoPlayerActivity"
             android:label="Video Player"
-            android:noHistory="true" />
+            android:noHistory="true"
+            android:screenOrientation="portrait" />
         <activity
+            android:name=".ui.ChatActivity"
             android:hardwareAccelerated="true"
-            android:name="com.sufnatech.meetingofhearts.ui.ChatActivity"
-            android:windowSoftInputMode="stateVisible|adjustPan" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateVisible|adjustResize" />
         <activity
-            android:name="com.sufnatech.meetingofhearts.players.ImageViewerActivity"
+            android:name=".players.ImageViewerActivity"
             android:label="Picture"
-            android:noHistory="true" />
+            android:noHistory="true"
+            android:screenOrientation="portrait" />
         <activity
+            android:name=".ui.ProfileActivity"
             android:hardwareAccelerated="true"
-            android:name="com.sufnatech.meetingofhearts.ui.ProfileActivity"
-            android:label="Profile" />
+            android:label="Profile"
+            android:screenOrientation="portrait" />
         <activity
-            android:name="com.sufnatech.meetingofhearts.Authentication.ui.SignUpActivity"
+            android:name=".Authentication.ui.SignUpActivity"
             android:label="Sign Up"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateVisible|adjustResize" />
         <activity
-            android:name="com.sufnatech.meetingofhearts.Authentication.ui.LoginActivity"
+            android:name=".Authentication.ui.LoginActivity"
             android:label="Login"
+            android:noHistory="true"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateVisible|adjustResize" />
         <activity
-            android:name="com.sufnatech.meetingofhearts.ui.MainActivity"
+            android:name=".ui.MainActivity"
             android:hardwareAccelerated="true"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -81,6 +84,25 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".NotificationService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/ic_notification_small" />
+        <!--
+ Set color used with incoming notification messages. This is used when no color is set for the incoming
+             notification message. See README(https://goo.gl/6BKBk7) for more.
+        -->
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/colorDark" />
     </application>
 
 </manifest>
