--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,12 @@
     <uses-permission android:name="android.permission.BLUETOOTH" />
 
     <application
-        android:name=".App"
         android:allowBackup="true"
         android:hardwareAccelerated="true"
-        android:icon="@mipmap/ic_moh"
+        android:icon="@mipmap/ic_weshare"
         android:label="@string/app_name"
         android:requestLegacyExternalStorage="true"
-        android:roundIcon="@mipmap/ic_moh_round"
+        android:roundIcon="@mipmap/ic_weshare_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
@@ -49,7 +48,8 @@
             android:name=".ui.ChatActivity"
             android:hardwareAccelerated="true"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateVisible|adjustResize" />
+            android:windowSoftInputMode="stateVisible|adjustResize"
+            />
         <activity
             android:name=".players.ImageViewerActivity"
             android:label="Picture"
@@ -73,6 +73,7 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateVisible|adjustResize" />
+
         <activity
             android:name=".ui.MainActivity"
             android:hardwareAccelerated="true"
@@ -103,6 +104,7 @@
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_color"
             android:resource="@color/colorDark" />
+
     </application>
 
 </manifest>
